feat(map-reduce-pipeline): add generate_plots step; pass json between steps

--- a/mapreduce-pipeline/Compute-Pi.ipynb
+++ b/mapreduce-pipeline/Compute-Pi.ipynb
@@ -14,7 +14,15 @@
     "    * (map) break our work into many small pieces that can be done in parallel, and then\n",
     "    * (reduce) aggregate the product of that work back to some final result\n",
     "\n",
-    "To bring it all together, we apply these techniques to compute an estimate of pi. "
+    "To bring it all together, we apply these techniques to compute an estimate of pi. \n",
+    "\n",
+    "## References:\n",
+    "\n",
+    "- [Intro to Kubeflow Pipelines](https://www.kubeflow.org/docs/pipelines/sdk/sdk-overview/)\n",
+    "\n",
+    "- [Making Components](https://www.kubeflow.org/docs/pipelines/sdk/component-development/)\n",
+    "\n",
+    "- [Samples](https://github.com/kubeflow/pipelines/tree/master/samples)\n"
    ]
   },
   {
@@ -62,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +89,8 @@
     "# This is what will show up in the Kubeflow Pipelines UI\n",
     "# These have the same naming restrictions as experiment names\n",
     "SAMPLE_PIPELINE_OP_NAME = \"sample\"\n",
-    "AVERAGE_PIPELINE_OP_NAME = \"average\""
+    "AVERAGE_PIPELINE_OP_NAME = \"average\"\n",
+    "PLOT_PIPELINE_OP_NAME = \"plot\""
    ]
   },
   {
@@ -93,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,16 +110,21 @@
     "### DON'T EDIT:         ###\n",
     "### Validate our inputs ###\n",
     "###########################\n",
-    "from utilities import validate_kfp_name, validate_bucket_name\n",
-    "\n",
-    "assert validate_kfp_name(EXPERIMENT_NAME)\n",
-    "assert validate_kfp_name(SAMPLE_PIPELINE_OP_NAME)\n",
-    "assert validate_kfp_name(AVERAGE_PIPELINE_OP_NAME)"
+    "def is_valid_kfp_name(s):\n",
+    "    \"\"\" Name must be alphanumeric with hyphens or underscores allowed \"\"\"\n",
+    "    import re\n",
+    "    experiment_name = re.compile('^[0-9a-zA-Z_-]+$')\n",
+    "    return experiment_name.match(s)\n",
+    "    \n",
+    "assert is_valid_kfp_name(EXPERIMENT_NAME)\n",
+    "assert is_valid_kfp_name(SAMPLE_PIPELINE_OP_NAME)\n",
+    "assert is_valid_kfp_name(AVERAGE_PIPELINE_OP_NAME)\n",
+    "assert is_valid_kfp_name(PLOT_PIPELINE_OP_NAME)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,8 +132,9 @@
     "### DON'T EDIT:                      ###\n",
     "### Path to the containers used here ###\n",
     "########################################\n",
-    "SAMPLE_IMAGE_PATH = f\"k8scc01covidacr.azurecr.io/kfp-components/map-reduce/sample:v1\"\n",
-    "AVERAGE_IMAGE_PATH = f\"k8scc01covidacr.azurecr.io/kfp-components/map-reduce/average:v1\""
+    "SAMPLE_IMAGE_PATH = f\"k8scc01covidacr.azurecr.io/kfp-components/map-reduce/sample:v2\"\n",
+    "AVERAGE_IMAGE_PATH = f\"k8scc01covidacr.azurecr.io/kfp-components/map-reduce/average:v2\"\n",
+    "PLOT_IMAGE_PATH = f\"k8scc01covidacr.azurecr.io/kfp-components/map-reduce/plot:v1\""
    ]
   },
   {
@@ -147,37 +162,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Our pipeline here has two steps, both of which are defined in docker containers (paths to those containers were specified above and are used below).  Each step is a factory function that returns ContainerOp's.  These ContainerOps are then used to define the actual pipeline next.\n",
+    "Our pipeline here has two main steps, and one bonus step. All three are defined in docker containers (paths to those containers were specified above and are used below). Each step in the pipeline is called an \"operation\", and these \"operations\" use the docker containers with the object ContainerOp's.  These ContainerOps are then used to define the actual pipeline next (with `@dsl.pipeline`).\n",
     "\n",
-    "For this example, the containers are already built and pushed to ```k8scc01covidacr.azurecr.io``` (see ```SAMPLE_IMAGE_PATH``` and ```AVERAGE_IMAGE_PATH``` above).  Each container has a small shell script to do the work for that operation (check out the scripts at ```./sample/sample.sh``` and ```./average/average.sh``` to see how they work).  This notebook defines two kubeflow pipeline operations (```sample_op``` and ```average_op```) that specify how kubeflow interacts with those containers (how to call them, what args to provide, what to do with their outputs, ...).  \n",
+    "## The `ContainerOp`s\n",
     "\n",
-    "Side note: Technically ```sample_op``` and ```average_op``` are factories that return ContainerOp instances.  Kubeflow Pipelines uses those ContainerOp instances to construct its definition of your pipeline, but if none of that makes sense its ok..."
+    "For this example, the containers are already built and pushed to ```k8scc01covidacr.azurecr.io``` (see ```SAMPLE_IMAGE_PATH```, ```AVERAGE_IMAGE_PATH```, and ```PLOT_IMAGE_PATH``` above). Each container has a small python script to do the work for that operation (take a look at the folders `sample`, `average`, and `generate_plot`). You can look at the respective subfolders here to see how these operations are defined.\n",
+    "\n",
+    "This notebook defines the kubeflow pipeline operations (```sample_op``` and ```average_op```) that specify how kubeflow interacts with those containers. We specify \n",
+    "\n",
+    "- What \"image\" to use (docker image)\n",
+    "- What args to provide, \n",
+    "- What to do with their outputs,\n",
+    "\n",
+    "\n",
+    "*Side note: Technically ```sample_op``` and ```average_op``` are factories that return ContainerOp instances.  Kubeflow Pipelines uses those ContainerOp instances to construct its definition of your pipeline, but if none of that makes sense it's ok...*"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "from kfp import dsl\n",
-    "import itertools\n",
     "\n",
     "def sample_op(seed):\n",
     "    \"\"\"\n",
-    "    Factory for \"sample\" pipeline operation\n",
+    "    Define the \"sample\" pipeline operation\n",
     "    \n",
-    "    Operations created by this factory invoke the SAMPLE step by invoking\n",
+    "    Operations created here invoke the SAMPLE step by invoking\n",
     "    a docker container that includes ./sample/sample.py.  sample.py accepts\n",
     "    a random seed as argument:\n",
     "    \n",
     "        sample.py SEED\n",
     "    \n",
     "    The result of this operation will be:\n",
-    "        output_result.txt: A file with either 0 (outside the unit circle) or 4\n",
-    "                           (inside the unit circle)\n",
-    "        output_coordinate.txt: The (x, y) coordinate sampled here\n",
-    "        input_seed.txt: A record of the seed used\n",
+    "        output_file.json: \n",
+    "            contents:\n",
+    "            {\n",
+    "                 \"x\" : x-coordinate,\n",
+    "                 \"y\" : y-coordinate,\n",
+    "                 \"result\" : 4 if in unit-circle, 0 otherwise,\n",
+    "                 \"seed\" : the input seed value,        \n",
+    "            }\n",
     "\n",
     "    These results are passed back in the .outputs in the ContainerOp result\n",
     "    \n",
@@ -193,10 +220,9 @@
     "        image=SAMPLE_IMAGE_PATH,\n",
     "        arguments=[seed],\n",
     "        # Specify where kubeflow will get output from\n",
-    "        file_outputs={\"result\": \"./output_result.txt\",\n",
-    "                      \"coordinate\": \"./output_coordinate.txt\",\n",
-    "                      \"seed\": \"./input_seed.txt\"\n",
-    "                     },\n",
+    "        file_outputs={\n",
+    "            \"output\" : \"./output_file.json\",\n",
+    "        },\n",
     "    )\n",
     "    \n",
     "    return op"
@@ -204,15 +230,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def average_op(numbers: list):\n",
     "    \"\"\"\n",
-    "    Factory for \"average\" pipeline operation\n",
+    "    Define the \"average\" pipeline operation\n",
     "        \n",
-    "    Operations created by this factory invoke the AVERAGE step by invoking\n",
+    "    Operations created here invoke the AVERAGE step by invoking\n",
     "    a docker container that includes ./average/average.py.  average.py accepts\n",
     "    one or more numbers as command line arguments and computes their average\n",
     "\n",
@@ -229,15 +255,55 @@
     "    \"\"\"\n",
     "    if len(numbers) == 0:\n",
     "        raise ValueError(\"numbers must be at least of length 1\")\n",
-    "    \n",
+    "\n",
     "    # Return the ContainerOp that defines our interaction with the container\n",
     "    op = dsl.ContainerOp(\n",
     "        name=AVERAGE_PIPELINE_OP_NAME,\n",
     "        image=AVERAGE_IMAGE_PATH,\n",
     "        arguments=numbers,\n",
     "        # Specify where to get output from\n",
-    "        file_outputs={'result': \"./out.txt\"},\n",
-    "    )"
+    "        file_outputs={'output' : \"./out.json\"},\n",
+    "    )\n",
+    "\n",
+    "    return op"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_plot_op(jsons: list):\n",
+    "    \"\"\"\n",
+    "    Define the \"generate_plot\" pipeline operation\n",
+    "        \n",
+    "    Operations created here invoke the PLOT step by invoking\n",
+    "    a docker container that includes ./generate_plot/compile_plot.py.  compile_plot.py accepts\n",
+    "    one or more json inputs as command line arguments and plots the \"x\" and \"y\" coordinates\n",
+    "    \n",
+    "    The result of this script is:\n",
+    "        out.png: A file containing the average of the inputs\n",
+    "\n",
+    "    This result is passed back as .output in the ContainerOp result\n",
+    "    \n",
+    "    Args:\n",
+    "        jsons (list): List of json strings from one or more sample steps\n",
+    "\n",
+    "    Returns:\n",
+    "        ContainerOp\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # Return the ContainerOp that defines our interaction with the container\n",
+    "    op = dsl.ContainerOp(\n",
+    "        name=PLOT_PIPELINE_OP_NAME,\n",
+    "        image=PLOT_IMAGE_PATH,\n",
+    "        arguments=numbers,\n",
+    "        # Specify where to get output from\n",
+    "        file_outputs={'result' : \"./out.png\"},\n",
+    "    )\n",
+    "\n",
+    "    return op"
    ]
   },
   {
@@ -258,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,24 +332,32 @@
     "### You can change below this      ###\n",
     "### Create the pipeline            ###\n",
     "######################################\n",
+    "\n",
     "@dsl.pipeline(\n",
     "    name=\"Estimate Pi\",\n",
     "    description='Estimate Pi using a Map-Reduce pattern'\n",
     ")\n",
     "def compute_pi():\n",
     "    \"\"\"Compute Pi\"\"\"\n",
-    "\n",
+    "    import json\n",
+    "    \n",
     "    # Create the seeds for our random samples\n",
     "    seeds = range(SAMPLES)\n",
-    "    \n",
+    "\n",
     "    # Create a \"sample\" operation for each seed passed to the pipeline\n",
     "    sample_ops = [sample_op(seed) for seed in seeds]\n",
     "\n",
-    "    # Define the average operation which consumes the result from each of the sample_ops\n",
-    "    # Note that the results for each sample_op, read in from their respective \n",
-    "    # output_result.txt files, are available from the sample_op instances through\n",
-    "    # the .outputs attribute\n",
-    "    _average_op = average_op([s.outputs['result'] for s in sample_ops])"
+    "    # Get the results, before we feed into two different pipelines.\n",
+    "    # The results are extracted from the output_file.json files, \n",
+    "    # are available from the sample_op instances through the .outputs attribute\n",
+    "    outputs = [s.outputs['output'] for s in sample_ops]\n",
+    "    \n",
+    "    _generate_plot_op(outputs)\n",
+    "    \n",
+    "    # The snippet\n",
+    "    #     json.loads(s)['result']\n",
+    "    # reads the output as json, then extracts one field (the result)\n",
+    "    _average_op = average_op([ json.loads(s)['result'] for s in outputs])"
    ]
   },
   {
@@ -292,10 +366,10 @@
    "source": [
     "It is important to understand here that while ```compute_pi``` describes the pipeline in python code, most of the computation is not done when we run the above block.  Calling ```sample_op``` does not do a **sample** operation, it creates a ContainerOp that tells kubeflow pipelines to run a **sample** operation when running the pipeline.  And when we do something like:\n",
     "```\n",
-    "    _average_op = average_op([s.outputs['result'] for s in sample_ops])\n",
+    "    outputs = [s.outputs['output'] for s in sample_ops]\n",
     "```\n",
     "\n",
-    "```s.outputs['result']``` is not the actual output of a **sample** operation, it is a placeholder that tells kubeflow pipelines \"when you get to this part in the pipeline, insert the output that you've previous computed for this **sample** operation here\".  This way you can pipe data from one pipeline step to the next without having to actually compute it now."
+    "```s.outputs['output']``` is not the actual output of a **sample** operation, it is a placeholder that tells kubeflow pipelines \"when you get to this part in the pipeline, insert the output that you've previous computed for this **sample** operation here\".  This way you can pipe data from one pipeline step to the next without having to actually compute it now."
    ]
   },
   {
@@ -307,17 +381,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Exported pipeline definition to compute-pi.zip\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "###############################################\n",
     "### DON'T EDIT:                             ###\n",
@@ -355,22 +421,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "Experiment link <a href=\"/pipeline/#/experiments/details/9b336825-fd42-4535-a5a4-1d11a171c833\" target=\"_blank\" >here</a>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "###################################\n",
     "### DON'T EDIT:                 ###\n",
@@ -390,22 +443,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "Run link <a href=\"/pipeline/#/runs/details/2d3caa99-e54b-4115-8b00-02cd49a73e82\" target=\"_blank\" >here</a>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "###############################################\n",
     "### DON'T EDIT:                             ###\n",
@@ -439,7 +479,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that this method of returning a result (accessible in our browser) is likely not that useful for most problems.  See other other demos for saving results to minio or other locations."
+    "Note: In this example the data is not egressed to your personal storage, and just lives inside Kubeflow.\n",
+    "\n",
+    "See other other demos for saving results to minio or other locations."
    ]
   },
   {
