feat(map-reduce): use json inputs/outputs

--- a/mapreduce-pipeline/Compute-Pi.ipynb
+++ b/mapreduce-pipeline/Compute-Pi.ipynb
@@ -133,8 +133,8 @@
     "### Path to the containers used here ###\n",
     "########################################\n",
     "SAMPLE_IMAGE_PATH = f\"k8scc01covidacr.azurecr.io/kfp-components/map-reduce/sample:v2\"\n",
-    "AVERAGE_IMAGE_PATH = f\"k8scc01covidacr.azurecr.io/kfp-components/map-reduce/average:v2\"\n",
-    "PLOT_IMAGE_PATH = f\"k8scc01covidacr.azurecr.io/kfp-components/map-reduce/plot:v1\""
+    "AVERAGE_IMAGE_PATH = f\"k8scc01covidacr.azurecr.io/kfp-components/map-reduce/average:v5\"\n",
+    "PLOT_IMAGE_PATH = f\"k8scc01covidacr.azurecr.io/kfp-components/map-reduce/plot:v6\""
    ]
   },
   {
@@ -221,7 +221,7 @@
     "        arguments=[seed],\n",
     "        # Specify where kubeflow will get output from\n",
     "        file_outputs={\n",
-    "            \"output\" : \"./output_file.json\",\n",
+    "            \"output\" : \"./output.json\",\n",
     "        },\n",
     "    )\n",
     "    \n",
@@ -234,7 +234,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def average_op(numbers: list):\n",
+    "def average_op(jsons: list):\n",
     "    \"\"\"\n",
     "    Define the \"average\" pipeline operation\n",
     "        \n",
@@ -253,14 +253,14 @@
     "    Returns:\n",
     "        ContainerOp\n",
     "    \"\"\"\n",
-    "    if len(numbers) == 0:\n",
-    "        raise ValueError(\"numbers must be at least of length 1\")\n",
+    "    if len(jsons) == 0:\n",
+    "        raise ValueError(\"jsons must be at least of length 1\")\n",
     "\n",
     "    # Return the ContainerOp that defines our interaction with the container\n",
     "    op = dsl.ContainerOp(\n",
     "        name=AVERAGE_PIPELINE_OP_NAME,\n",
     "        image=AVERAGE_IMAGE_PATH,\n",
-    "        arguments=numbers,\n",
+    "        arguments=jsons,\n",
     "        # Specify where to get output from\n",
     "        file_outputs={'output' : \"./out.json\"},\n",
     "    )\n",
@@ -298,9 +298,9 @@
     "    op = dsl.ContainerOp(\n",
     "        name=PLOT_PIPELINE_OP_NAME,\n",
     "        image=PLOT_IMAGE_PATH,\n",
-    "        arguments=numbers,\n",
+    "        arguments=jsons,\n",
     "        # Specify where to get output from\n",
-    "        file_outputs={'result' : \"./out.png\"},\n",
+    "        file_outputs={\"html\" : \"./out.html\"},\n",
     "    )\n",
     "\n",
     "    return op"
@@ -340,7 +340,7 @@
     "def compute_pi():\n",
     "    \"\"\"Compute Pi\"\"\"\n",
     "    import json\n",
-    "    \n",
+    "\n",
     "    # Create the seeds for our random samples\n",
     "    seeds = range(SAMPLES)\n",
     "\n",
