feat(map-reduce): add plot generation to the pipeline

--- a/mapreduce-pipeline/Compute-Pi.ipynb
+++ b/mapreduce-pipeline/Compute-Pi.ipynb
@@ -22,7 +22,12 @@
     "\n",
     "- [Making Components](https://www.kubeflow.org/docs/pipelines/sdk/component-development/)\n",
     "\n",
-    "- [Samples](https://github.com/kubeflow/pipelines/tree/master/samples)\n"
+    "- [Samples](https://github.com/kubeflow/pipelines/tree/master/samples)\n",
+    "\n",
+    "\n",
+    "## For Output Artifacts, look here (Note: temporarily disabled)\n",
+    "\n",
+    "- [Output Artifacts](https://www.kubeflow.org/docs/pipelines/sdk/output-viewer/)\n"
    ]
   },
   {
@@ -79,7 +84,7 @@
     "#################################\n",
     "\n",
     "# Number of parallel sample steps we run\n",
-    "SAMPLES = 15\n",
+    "SAMPLES = 5\n",
     "\n",
     "# Name of our experiment in kubeflow\n",
     "# Experiment name can contain alphanumeric characters, hyphens, or underscores\n",
@@ -352,12 +357,8 @@
     "    # are available from the sample_op instances through the .outputs attribute\n",
     "    outputs = [s.outputs['output'] for s in sample_ops]\n",
     "    \n",
-    "    _generate_plot_op(outputs)\n",
-    "    \n",
-    "    # The snippet\n",
-    "    #     json.loads(s)['result']\n",
-    "    # reads the output as json, then extracts one field (the result)\n",
-    "    _average_op = average_op([ json.loads(s)['result'] for s in outputs])"
+    "    _generate_plot_op = generate_plot_op(outputs)\n",
+    "    _average_op = average_op(outputs)"
    ]
   },
   {
@@ -501,6 +502,13 @@
     "\n",
     "This sort of pattern lets us horizontally scale our resources and is perfectly suited if you are doing the same sort of thing repetitively on isolated data.  You take advantage of the flexible compute environment to burst up to high usage for a short amount of time, then scale back down automatically.  You could apply the same strategy in other settings too, such as for computing new features from your data. "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
